$Id: History,v 1.4 2000-11-20 18:14:53 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

   Please keep a summary of these message in geometry/History!

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 20, 2000	Gabriele Cosmo (STEP-V02-00-00)
- Fixes to remove warnings from "-Wall -ansi -pedantic" g++ compiler options:
  o commented out variables declared and not used.
  o fixed declaration of variables used before being initialised.
  o dirobj.h: protected from missing definition of MAXNAMLEN, S_IFMT and
    S_IFDIR originally defined in /usr/include/sys/stat.h.
  o fixed order of initialisation of member data in constructors.

June 14, 2000		Gabriele Cosmo (STEP-V01-01-00)
- Fixes for porting on Win/NT VC++:
  o dirobj[.h.cc]: deactivated Reset() and Home() functions.
  o scl_cf.h: undefine HAVE_UNISTD_H for WIN32.
  o stat.h: don't use hard-coded path for <sys/stat.h> on WIN32.
  o ExpDict.cc: don't declare external memmove() for WIN32.
  o STEPcomplex.cc, SdaiCONFIG_CONTROL_DESIGN.cc: use explicit typedef
    StepApplicationInstanceType for SDAI::Application_instance and
    StepSelectType for SDAI::Select respectively, when invoking a method
    of the base class in scope.

February 14, 2000	Gabriele Cosmo (STEP-V01-00-01)