@@ -1,4 +1,4 @@
-$Id: History,v 1.4 2000-11-20 18:14:53 gcosmo Exp $
+$Id: History,v 1.5 2001-04-20 19:06:52 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -18,6 +18,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+April 20, 2001          Gabriele Cosmo
+- Minor fixes for removing some pedantic warnings from Linux-g++,
+  modified files: scl_hash.cc, scl_string.cc.
 
 November 20, 2000	Gabriele Cosmo (STEP-V02-00-00)
 - Fixes to remove warnings from "-Wall -ansi -pedantic" g++ compiler options:
